--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,27 @@
-.wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+@import url('https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic');
+
+body {
+	margin: 0;
+}
+
+ul.Navbar {
+	display: flexbox;
+	list-style: none;
+	font-size: 24px;
+	font-family: Lato;
+	width: 100%;
+	height: 1em;
+	padding: 0.5em;
+	margin: 0;
+	background-color: black;
+	& > a {
+		display: inline;
+		padding: 0 1em 0 0;
+		color: #dddddd;
+		text-decoration: none;
+		&:hover {
+			color: white;
+		}
+		transition: color 0.1s;
+	}
 }
