--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,26 +2,53 @@
 
 body {
 	margin: 0;
+	background-color: #fcf8f3;
 }
 
-ul.Navbar {
-	display: flexbox;
+ul.sidebar {
+	position: -webkit-sticky;
+	position: sticky;
 	list-style: none;
-	font-size: 24px;
 	font-family: Lato;
-	width: 100%;
-	height: 1em;
-	padding: 0.5em;
+	font-size: 24px;
+	width: 20em;
+	height: 100vh;
+	box-sizing: border-box;
 	margin: 0;
-	background-color: black;
+	padding: 1em;
+	background-color: #ffffff;
+	border-right: 1px solid #e2e2e2;
 	& > a {
-		display: inline;
-		padding: 0 1em 0 0;
-		color: #dddddd;
+		border-radius: 0.3em;
+		display: block;
+		padding: 0.5em;
+		margin: 0 0 1em 0;
+		color: black;
 		text-decoration: none;
-		&:hover {
-			color: white;
+		&.active {
+			background-color: #0c0c1c0d;
 		}
-		transition: color 0.1s;
+		&:hover {
+			background-color: #0c0c1c18;
+		}
+		transition: all 0.2s;
+	}
+	h1 {
+		font-size: 24px;
+	}
+	p {
+		font-size: 16px;
+	}
+	div.number {
+		p {
+			font-size: 24px;
+		}
+		align-items: center;
+		justify-content: center;
+		display: flex;
+		width: 2em;
+		height: 2em;
+		border-radius: 1em;
+		background-color: #0c0c0c18;
 	}
 }
