select/deselect all

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,7 @@ body {
 		background-color: #0c0c0c;
 		height: max-content;
 		margin: 0 1em 0 0;
+		cursor: pointer;
 	}
 	& > p {
 		margin: 0 1em 0 0;
