states, select/deselect all, mute

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,18 @@ body {
 	flex-direction: column;
 }
 
+.muteButton {
+	font-size: 30px;
+	border-radius: 0;
+	border: none;
+	color: black;
+	background-color: #00000000;
+	height: max-content;
+	margin: 0 1em 0 0;
+	cursor: pointer;
+	font-family: Lato;
+}
+
 .Header {
 	display: flex;
 	flex-grow: 0;
@@ -19,27 +31,34 @@ body {
 	margin: 0;
 	background-color: #0c0c0c18;
 	height: max-content;
-	& > button {
-		border-radius: 0;
+	padding: 0.5em;
+	font-size: 20px;
+	align-content: center;
+	& > button.choose {
+		font-size: 20px;
+		border-radius: 0.3em;
 		border: none;
 		color: white;
 		background-color: #0c0c0c;
 		height: max-content;
 		margin: 0 1em 0 0;
 		cursor: pointer;
+		padding: 0.2em 0.5em;
+		font-family: Lato;
 	}
 	& > p {
+		padding: 0.2em 0.5em;
+		font-family: Lato;
 		margin: 0 1em 0 0;
 		height: max-content;
 	}
 }
 
-table.Table {
+table.ChoosingTable {
 	font-size: 20px;
 	font-family: Lato;
 	border-collapse: collapse;
 	height: max-content;
-	flex-grow: 1;
 	& > thead {
 		text-align: left;
 		height: 2em;
@@ -64,6 +83,29 @@ table.Table {
 		& > td.tableNumber {
 			width: 4ch;
 			color: #aaaaaaaa;
+		}
+	}
+}
+
+table.SpeakingTable {
+	font-size: 32px;
+	font-family: Lato;
+	border-collapse: collapse;
+	height: max-content;
+	& > thead {
+		text-align: left;
+		height: 2em;
+		background-color: #0c0c0c18;
+		border-bottom: 1px solid #aaaaaa;
+	}
+	& > tbody > tr {
+		height: 1em;
+		border-bottom: 1px solid #aaaaaa77;
+		color: #333;
+		& > td.speaking {
+			color: #9e0b00;
+			font-weight: 700;
+			font-size: 40px;
 		}
 	}
 }
